--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -9,6 +9,7 @@
         "main": "Entities",
         "region": "Region",
         "country": "Country",
+        "first-registration": "First registration",
         "location": "Location",
         "checkPoint": "Check Point",
         "refugee": "Refugee",
